// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingChart is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiLoadingChart testClass1 testClass2 euiLoadingChart--medium"
  data-test-subj="test subject string"
>
  <div
    aria-label="animation"
    role="button"
    style="width:100%;height:100%;overflow:hidden;margin:0 auto;outline:none"
    tabindex="0"
    title=""
  />
</div>
`;

exports[`EuiLoadingChart mono is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--mono euiLoadingChart--medium"
>
  <div
    aria-label="animation"
    role="button"
    style="width:100%;height:100%;overflow:hidden;margin:0 auto;outline:none"
    tabindex="0"
    title=""
  />
</div>
`;

exports[`EuiLoadingChart size l is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--large"
>
  <div
    aria-label="animation"
    role="button"
    style="width:100%;height:100%;overflow:hidden;margin:0 auto;outline:none"
    tabindex="0"
    title=""
  />
</div>
`;

exports[`EuiLoadingChart size m is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--medium"
>
  <div
    aria-label="animation"
    role="button"
    style="width:100%;height:100%;overflow:hidden;margin:0 auto;outline:none"
    tabindex="0"
    title=""
  />
</div>
`;

exports[`EuiLoadingChart size xl is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--xLarge"
>
  <div
    aria-label="animation"
    role="button"
    style="width:100%;height:100%;overflow:hidden;margin:0 auto;outline:none"
    tabindex="0"
    title=""
  />
</div>
`;
